--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "gregwar/image-bundle": "dev-master",
         "incenteev/composer-parameter-handler": "^2.0",
         "jms/serializer-bundle": "^2.4",
+        "liuggio/excelbundle": "^2.1",
         "nelmio/cors-bundle": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
