--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,25 +24,27 @@ RUN docker-php-ext-install \
     mbstring 
 
 # MSSQL
-ENV ACCEPT_EULA=Y
-RUN apt-get update \
-    && curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
-    && curl https://packages.microsoft.com/config/debian/9/prod.list \
-        > /etc/apt/sources.list.d/mssql-release.list \
-    && apt-get install -y --no-install-recommends \
-        locales \
-        apt-transport-https \
-    && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
-    && locale-gen \
-    && apt-get update \
-    && apt-get -y --no-install-recommends install \
-        unixodbc-dev \
-        msodbcsql17
+# ENV ACCEPT_EULA=Y
+# RUN apt-get update \
+#     && curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
+#     && curl https://packages.microsoft.com/config/debian/9/prod.list \
+#         > /etc/apt/sources.list.d/mssql-release.list \
+#     && apt-get install -y --no-install-recommends \
+#         locales \
+#         apt-transport-https \
+#     && echo "en_US.UTF-8 UTF-8" > /etc/locale.gen \
+#     && locale-gen \
+#     && apt-get update \
+#     && apt-get -y --no-install-recommends install \
+#         unixodbc-dev \
+#         msodbcsql17
 
 
-RUN docker-php-ext-install pdo \
-    && pecl install sqlsrv pdo_sqlsrv xdebug \
-    && docker-php-ext-enable sqlsrv pdo_sqlsrv xdebug
+# RUN docker-php-ext-install pdo \
+#     && pecl install sqlsrv pdo_sqlsrv xdebug \
+#     && docker-php-ext-enable sqlsrv pdo_sqlsrv xdebug
+# RUN docker-php-ext-install pdo \
+#     && pecl install xdebug
 
 RUN echo "pdo_sqlsrv.client_buffer_max_kb_size = 2048000" >>  /usr/local/etc/php/conf.d/docker-php-ext-pdo_sqlsrv.ini
 RUN echo "client_buffer_max_kb_size = '2048000'" >>  /usr/local/etc/php/conf.d/docker-php-ext-pdo_sqlsrv.ini
